[package]
name = "checksum"
version = "0.6.3-beta.4"
authors = ["J/A <archer884@gmail.com>"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
blake3 = { version = "1.3.1", features = ["traits-preview"] }
clap = { version = "3.2.3", features = ["derive"] }
digest = "0.10.3"
hashbrown = "0.12.1"
imprint = { git = "https://github.com/archer884/imprint" }
md-5 = "0.10.1"
owo-colors = "3.4.0"
rayon = "1.5.3"
sha-1 = "0.10.0"
sha2 = "0.10.2"
uncased = "0.9.7"
walkdir = "2.3.2"
